<resources>
    <string name="app_name">Task_Manager_4</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="you_wont_delete">Вы хотите удилить?</string>
    <string name="recovery_is_not_possible">Если вы удалите то востановлени будет невозможным!</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="user_name">User name</string>
    <string name="save">Save</string>
    <string name="get_start">Get start</string>
    <string name="update">Update</string>
    <string name="navigation_task">Task</string>
    <string name="navigation_profile">Profile</string>
    <string name="update_task">Update Task</string>
    <string name="enter_number_phone">Введите номер телефона</string>
    <string name="send_code">Отправить код</string>
    <string name="et_label">Label</string>
    <string name="et_model">Model</string>
</resources>

