<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.task_manager_4.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.task_manager_4.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.task_manager_4.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.task_manager_4.ui.profile.ProfileFragment"
        android:label="@string/navigation_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/taskFragment"
        android:name="com.example.task_manager_4.ui.task.TaskFragment"
        android:label="@string/navigation_task"
        tools:layout="@layout/fragment_task" />

    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="com.example.task_manager_4.ui.onboarding.OnBoardingFragment"
        android:label="fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding" >

        <action
            android:id="@+id/action_onBoardingFragment_to_phoneFragment"
            app:destination="@id/phoneFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/phoneFragment" />

    </fragment>

    <fragment
        android:id="@+id/phoneFragment"
        android:name="com.example.task_manager_4.ui.auth.phone.PhoneFragment"
        android:label="PhoneFragment"
        tools:layout="@layout/fragment_phone" />

    <fragment
        android:id="@+id/acceptFragment"
        android:name="com.example.task_manager_4.ui.auth.accept.AcceptFragment"
        android:label="AcceptFragment"
        tools:layout="@layout/fragment_accept" >

        <action
            android:id="@+id/action_acceptFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpToInclusive="true"
            app:popUpTo="@id/navigation_home"/>

    </fragment>

</navigation>